<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/LightGreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/LighterGreen"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:background="@color/LighterGreen"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/id"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/foodItemsID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/food_items"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/dateID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/caloriesID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/calories"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="97dp"
                android:layout_height="150dp"
                android:background="@color/LighterGreen"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editButton"
                    android:layout_width="39dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/editButton"
                    android:paddingTop="2dp"
                    android:paddingRight="2dp"
                    app:srcCompat="@drawable/edit" />

                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/deleteButton"
                    android:paddingRight="2dp"
                    android:paddingBottom="2dp"
                    app:srcCompat="@drawable/trash" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>