<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:launchMode="singleTask"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/LightGreen"
                                                   tools:context=".service.AddNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="413dp"
            android:layout_height="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/createNoteText"
                android:layout_width="130dp"
                android:layout_height="82dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="257dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/font2bold"
                android:paddingTop="50dp"
                android:text="@string/createNote"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="26dp"
                android:layout_marginRight="257dp"/>

            <EditText
                android:id="@+id/dateInputCreate"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:background="@color/LighterGreen"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/createDate"
                android:inputType="date"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TouchTargetSizeCheck" android:layout_marginRight="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/idInputCreate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="589dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createID"
            android:inputType="none"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/caloriesInputCreate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="470dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createCalories"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <EditText
            android:id="@+id/sugarQuantityInputCreate"
            android:layout_width="372dp"
            android:layout_height="49dp"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="270dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="412dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createSugarQuantity"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
        <EditText
            android:id="@+id/FoodProductsInputCreate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="530dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createFoodItems"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
        <EditText
            android:id="@+id/additionalInfoInputCreate"
            android:layout_width="370dp"
            android:layout_height="302dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="328dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="101dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:gravity="top"
            android:hint="@string/createAdditionalInfo"
            android:inputType="textMultiLine"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="23dp"
            android:layout_marginRight="18dp"/>

        <Button
            android:id="@+id/cancelButtonCreate"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="647dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="36dp"
            android:background="@color/LighterGreen"
            android:fontFamily="@font/font2bold"
            android:text="@string/cancelOption"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="45dp"
            android:layout_marginRight="250dp"/>

        <Button
            android:id="@+id/saveButtonCreate"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginStart="244dp"
            android:layout_marginTop="647dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="36dp"
            android:background="@color/LighterGreen"
            android:fontFamily="@font/font2bold"
            android:text="@string/saveOption"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="244dp"
            android:layout_marginRight="51dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>