<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:launchMode="singleTask"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/LightGreen" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="413dp"
            android:layout_height="76dp" tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/updateNoteText"
                android:layout_width="221dp"
                android:layout_height="84dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="257dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/font2bold"
                android:paddingTop="50dp"
                android:text="@string/updateNote"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="26dp"
                android:layout_marginRight="257dp"/>

            <EditText
                android:id="@+id/dateInputUpdate"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:background="@color/LighterGreen"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/createDate"
                android:inputType="date"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" android:layout_marginLeft="250dp"
                android:layout_marginRight="18dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="176dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/font2bold"
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="210dp"
                android:layout_marginRight="176dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/idInputUpdate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="587dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:inputType="none"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/foodItemsInputUpdate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="490dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createFoodItems"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/caloriesInputUpdate"
            android:layout_width="371dp"
            android:layout_height="49dp"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="269dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="413dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createCalories"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>


        <EditText
            android:id="@+id/sugarQuantityInputUpdate"
            android:layout_width="372dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="352dp"
            android:layout_marginBottom="330dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:hint="@string/createSugarQuantity"
            android:inputType="textPersonName"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/textInputUpdate"
            android:layout_width="371dp"
            android:layout_height="216dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="422dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="93dp"
            android:autofillHints=""
            android:background="@color/LighterGreen"
            android:ems="10"
            android:fontFamily="@font/font2bold"
            android:gravity="top"
            android:hint="@string/createAdditionalInfo"
            android:inputType="textMultiLine"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancelButtonUpdate"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="647dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="36dp"
            android:background="@color/LighterGreen"
            android:fontFamily="@font/font2bold"
            android:text="@string/cancelOption"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="45dp"
            android:layout_marginRight="250dp"/>

        <Button
            android:id="@+id/saveButtonUpdate"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginStart="244dp"
            android:layout_marginTop="647dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="36dp"
            android:background="@color/LighterGreen"
            android:fontFamily="@font/font2bold"
            android:text="@string/saveOption"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginRight="51dp"
            android:layout_marginLeft="244dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2bold"
            android:text="Additional Info"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2bold"
            android:text="Sugar Quantity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.457"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2bold"
            android:text="Calories"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="338dp"
            android:layout_height="24dp"
            android:fontFamily="@font/font2bold"
            android:text="Food Items"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>